--- a/stratsALCKappaFriedRFwRedux.tex
+++ b/stratsALCKappaFriedRFwRedux.tex
@@ -4,12 +4,12 @@
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   \\
 2 - Clu  	&   & - &   &   &   &   &   &   &   \\ \hline
-3 - \textbf{ATUmah}	&   &   & - &   &   &   &   &   & + \\
-4 - \textbf{GATUmah}	&   &   &   & - &   &   &   &   &   \\ \hline
-5 - \textbf{SGmulti}	& * & * &   & * & - &   &   &   & * \\
-6 - Mar  	& * & * & * & * &   & - &   &   & * \\ \hline
-7 - TUmah	& * & * & * & * &   &   & - &   & * \\
-8 - EERent	& * & + &   & * &   &   &   & - & * \\ \hline
+3 - \textbf{ATUmah}	&   &   & - &   &   &   &   &   &   \\
+4 - \textbf{HTUmah}	&   &   &   & - &   &   &   &   &   \\ \hline
+5 - \textbf{SGmulti}	& + &   & * & * & - &   &   &   & * \\
+6 - Mar  	& + & . & * & * &   & - &   &   & * \\ \hline
+7 - TUmah	& + & . & * & * &   &   & - &   & * \\
+8 - EERent	&   &   & * & . &   &   &   & - & . \\ \hline
 9 - QBC  	&   &   &   &   &   &   &   &   & - \\\end{tabular}
 \label{stratsALCKappaFriedRFwRedux}
 \end{center}
